# oracle-be

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  Cargo.toml  README.md  SECURITY.md  clippy.toml  package.json  pnpm-lock.yaml  program-id.md  rustfmt.toml
clients/js/: .eslintrc.cjs  package.json  tsconfig.json
clients/js/scripts/: _utils.ts  create-config.ts  create-oracle.ts  fetch-account.ts  update-config.ts
clients/js/scripts/utils/: amount.ts  cli.ts  errors.ts  index.ts  log.ts  misc.ts  spinner.ts  types.d.ts  umi.ts
clients/js/scripts/utils/prompt/: amount.ts  confirm.ts  index.ts  integer.ts  public-key.ts  search.ts  theme.ts
clients/js/scripts/utils/solana/: cli-config.ts  index.ts  keypair.ts  misc.ts
clients/js/src/hooked/: pda.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/rust/src/hooked/: mod.rs
configs/: kinobi.mjs  shank.mjs  validator.cjs
configs/program-scripts/: build.py  test.py
crates/common/: Cargo.toml
crates/common-macros/: Cargo.toml
crates/common-macros/src/: borsh_size.rs  build_instruction.rs  lib.rs  variant_name.rs
crates/common-test/: Cargo.toml
crates/common-test/src/: account.rs  borsh.rs  context.rs  lib.rs  macros.rs  setup.rs
crates/common/src/: account.rs  borsh_size.rs  lib.rs  misc.rs  syscalls.rs  variant_name.rs
crates/common/src/cpi/: spl.rs  sys.rs
crates/cpi/: Cargo.toml
crates/cpi/src/: lib.rs  spl.rs  sys.rs
idls/: optimistic_oracle.json  oracle.json
programs/oracle/: Cargo.toml  build.rs
programs/oracle/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  macros.rs  pda.rs
programs/oracle/src/cpi/: mod.rs  spl.rs  sys.rs
programs/oracle/src/processor/: claim_assertion_v1.rs  claim_dispute_v1.rs  claim_vote_v1.rs  close_voting_v1.rs  create_assertion_v1.rs  create_config_v1.rs  create_currency_v1.rs  create_oracle_v1.rs  create_request_v1.rs  create_stake_v1.rs  dispute_assertion_v1.rs  mod.rs  resolve_assertion_v1.rs  submit_vote_v1.rs  update_config_v1.rs  update_currency_v1.rs  update_oracle_v1.rs
programs/oracle/src/processor/assertion/: create.rs  dispute.rs  expire.rs  mod.rs
programs/oracle/src/processor/oracle/: create.rs
programs/oracle/src/processor/request/: create.rs
programs/oracle/src/processor/voting/: finalize.rs  mod.rs  submit.rs
programs/oracle/src/state/: assertion.rs  config.rs  currency.rs  mod.rs  oracle.rs  request.rs  stake.rs  vote.rs  voting.rs
programs/oracle/src/utils/: account.rs  asserts.rs  bounds.rs  bps.rs  mod.rs  tests.rs
programs/parimutuel-resolver/: Cargo.toml
programs/parimutuel-resolver/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  macros.rs  pda.rs
programs/parimutuel-resolver/src/cpi/: mod.rs  oracle.rs  parimutuel.rs
programs/parimutuel-resolver/src/processor/: mod.rs
programs/parimutuel-resolver/src/processor/resolver/: create.rs  mod.rs  resolve.rs
programs/parimutuel-resolver/src/state/: mod.rs  resolver.rs
programs/parimutuel-resolver/src/utils/: account.rs  asserts.rs
