[workspace]
members = ["crates/*", "programs/*", "clients/rust"]
resolver = "2"

[workspace.dependencies]
solana-sdk = "1.18.2"
solana-program = "1.18.2"
solana-program-test = "1.18.2"
solana-logger = "1.18.2"

spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "2.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }

borsh = { version = "0.10.3", features = ["const-generics"] }
bytemuck = { version = "1.14", features = ["extern_crate_std"] }
bincode = "1.3"

thiserror = "1.0.56"
num-traits = "0.2.17"
num-derive = "0.4.1"

async-trait = "0.1.77"
eyre = "0.6.12"
log = "0.4.20"

common = { path = "crates/common" }
common-test = { path = "crates/common-test" }

[profile.release]
overflow-checks = true
strip = true
opt-level = "z"
codegen-units = 1
lto = true

[profile.release.build-override]
opt-level = "z"
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3
