[workspace]
members = ["crates/*", "programs/*", "clients/rust"]
resolver = "2"

[workspace.dependencies]
solana-program = "1.18.16"

spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }

borsh = { version = "0.10.3", features = ["const-generics"] }
bytemuck = { version = "1.16.0", features = ["extern_crate_std"] }
bincode = "1.3.3"

thiserror = "1.0.61"
num-traits = "0.2.19"
num-derive = "0.4.2"

common = { path = "crates/common" }
common-test = { path = "crates/common-test" }

[profile.release]
opt-level = 3
strip = true
overflow-checks = true
lto = true
codegen-units = 1
