[workspace]
members = ["crates/*", "programs/*", "clients/rust"]
resolver = "2"

[workspace.dependencies]
solana-program = "2.0.7"

spl-token-2022 = { version = "5.0.1", features = ["no-entrypoint"] }

borsh = { version = "0.10.3", features = ["const-generics"] }
bytemuck = { version = "1.17.1", features = ["extern_crate_std"] }
bincode = "1.3.3"

thiserror = "1.0.63"
num-traits = "0.2.19"
num-derive = "0.4.2"

cpi = { path = "crates/cpi" }

borsh-size = { git = "https://github.com/Hedgehog-Markets/solana-utils", rev = "e457cbe" }
include-idl = { git = "https://github.com/Hedgehog-Markets/solana-utils", rev = "e457cbe" }
security-txt = { git = "https://github.com/Hedgehog-Markets/solana-utils", rev = "e457cbe" }
solana-utils = { git = "https://github.com/Hedgehog-Markets/solana-utils", rev = "e457cbe" }

[profile.release]
opt-level = 3
strip = true
overflow-checks = true
lto = true
codegen-units = 1
