[package]
name = "optimistic-oracle"
version = "0.0.0"
edition = "2021"
publish = false

[features]
serde = ["dep:serde", "serde_with"]

[dependencies]
solana-program = { workspace = true }

borsh = { workspace = true }
thiserror = "1.0"
num-derive = "0.4.2"
num-traits = { workspace = true }

serde = { version = "1.0", optional = true }
serde_with = { version = "3.6.0", optional = true }
