[package]
name = "optimistic-oracle"
version = "0.0.0"
edition = "2021"
publish = false

[features]
serde = ["dep:serde", "serde_with"]

[dependencies]
solana-program = "1.18.2"

borsh = { version = "0.10.3", features = ["const-generics"] }
thiserror = "1.0"
num-traits = "0.2.17"
num-derive = "0.4.1"

serde = { version = "1.0", optional = true }
serde_with = { version = "3.6.0", optional = true }
