[package]
name = "common-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
solana-logger = { workspace = true }

spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }

borsh = { workspace = true }
bincode = { workspace = true }

async-trait = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }

color-eyre = "0.6"
