[package]
name = "oracle-program"
version = "2.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
cpi = { workspace = true }

borsh-size = { workspace = true }
include-idl = { workspace = true }
security-txt = { workspace = true }
solana-utils = { workspace = true }

solana-program = { workspace = true }

spl-token-2022 = { workspace = true }

shank = "0.4.2"
borsh = { workspace = true }
bytemuck = { workspace = true }

thiserror = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

[build-dependencies]
include-idl = { workspace = true, features = ["shrink"] }
