[package]
name = "parimutuel-resolver"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
common = { workspace = true }

solana-program = { workspace = true }

shank = "0.4.2"
borsh = { workspace = true }
bytemuck = { workspace = true }

thiserror = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

oracle = { path = "../oracle", features = ["no-entrypoint"] }

[dev-dependencies]
common-test = { workspace = true }

# solana-sdk = { workspace = true }
solana-program-test = { workspace = true }

async-trait = { workspace = true }
log = { workspace = true }
